chore(ci): pass BUILD_SHA arg to frontend docker build so UI shows deployed commit

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -73,6 +73,8 @@ jobs:
         with:
           context: ./frontend
           file: ./frontend/Dockerfile
+          build-args: |
+            BUILD_SHA=${{ github.sha }}
           push: true
           provenance: false
           platforms: linux/amd64,linux/arm64
@@ -123,6 +125,8 @@ jobs:
         with:
           context: ./frontend
           file: ./frontend/Dockerfile
+          build-args: |
+            BUILD_SHA=${{ github.sha }}
           push: true
           provenance: false
           platforms: linux/amd64,linux/arm64
