Fix bottom model training: adjust parameters and min labels

--- a/.env
+++ b/.env
@@ -118,9 +118,11 @@ AUTO_PROMOTE_MODEL_NAME=bottom_predictor
 
 # bottom 라벨 파라미터 (훈련/추론 모두에 사용). 필요 시 조정.
 # lookahead: 향후 N개 캔들에서 이벤트 확인, drawdown: 기준 대비 하락 비율, rebound: 저점 대비 반등 비율
-BOTTOM_LOOKAHEAD=30
-BOTTOM_DRAWDOWN=0.005
-BOTTOM_REBOUND=0.003
+BOTTOM_LOOKAHEAD=60
+BOTTOM_DRAWDOWN=0.001
+BOTTOM_REBOUND=0.0005
+# bottom 모델 학습에 필요한 최소 라벨 수 (기본값: 150)
+BOTTOM_MIN_LABELS=30
 
 # Trading fee configuration
 # 수수료 모드: taker | maker (기본 taker)
@@ -187,4 +189,14 @@ SCALE_IN_GATE_MODE=and
 # Require net-profit-only exits (fees included)
 # true => Live Trading will only exit a position when realized PnL after fees is positive
 EXIT_REQUIRE_NET_PROFIT=true
+
+#############################################
+# Docker Compose 포트 설정
+#############################################
+# 프론트엔드 포트 (기본값: 5173)
+FRONTEND_PORT=5173
+# 백엔드 API 포트 (기본값: 8000)
+APP_PORT=8000
+# 데이터베이스 외부 포트 (기본값: 55432)
+DB_PORT=55432
 
