--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
 services:
-  # Note: DB service removed; app will use host/external DB via .env
+  db:
+    image: postgres:15
+    container_name: pro11-postgres
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-mydata}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-traderpass}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-mydata}"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+    ports:
+      - "${DB_PORT:-55432}:5432"
 
   app:
     build:
@@ -10,10 +25,9 @@ services:
     env_file:
       - .env
       - .env.private
-    # No DB dependency; relies on external DB via .env POSTGRES_*
     environment:
       # DB 연결은 .env 의 POSTGRES_* 값을 그대로 사용.
-      #  - 컨테이너 내 Postgres 서비스(db)에 붙으려면 .env 에 POSTGRES_HOST=db 설정
+      #  - 컨테이너 내 Postgres 서비스(db)에 붙으려면 DOCKER_POSTGRES_HOST 변수 없이 기본값을 사용합니다.
       #  - 호스트/외부 RDS 로 붙으려면 .env 에 host.docker.internal 또는 실제 호스트/IP 지정
       APP_ENV: ${APP_ENV:-docker}
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
@@ -22,10 +36,14 @@ services:
       CALIBRATION_MONITOR_ENABLED: ${CALIBRATION_MONITOR_ENABLED:-false}
       INGESTION_ENABLED: ${INGESTION_ENABLED:-false}
       SKIP_DB: ${SKIP_DB:-false}
+      POSTGRES_HOST: ${DOCKER_POSTGRES_HOST:-db}
     ports:
       - "${APP_PORT:-8000}:8000"
     # Compose logs helpful for debugging pool issues
     restart: unless-stopped
+    depends_on:
+      db:
+        condition: service_healthy
 
   frontend:
     build:
@@ -40,3 +58,6 @@ services:
     ports:
       - "${FRONTEND_PORT:-8080}:80"
     restart: unless-stopped
+
+volumes:
+  pgdata:
