fix: 로컬 컨테이너에서 API 포트 노출 수정

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,6 +10,13 @@ services:
     environment:
       APP_ENV: local
       LOG_LEVEL: DEBUG
-    command: >
-      sh -c "poetry run uvicorn backend.apps.api.main:app \
-        --host 0.0.0.0 --port 8000 --reload --reload-dir backend"
+    command:
+      - /app/.venv/bin/uvicorn
+      - backend.apps.api.main:app
+      - --host
+      - 0.0.0.0
+      - --port
+      - "8000"
+      - --reload
+      - --reload-dir
+      - backend
