--- a/.github/workflows/deploy-runner.yml
+++ b/.github/workflows/deploy-runner.yml
@@ -76,12 +76,34 @@ jobs:
           GH_OWNER: ${{ steps.prep.outputs.gh_owner }}
           BACKEND_TAG: ${{ steps.prep.outputs.backend_tag }}
           FRONTEND_TAG: ${{ steps.prep.outputs.frontend_tag }}
+          # Optional environment files as base64 (set these in environment secrets)
+          ENV_B64: ${{ github.event.inputs.target == 'prod' && secrets.PROD_ENV_B64 || secrets.STAGING_ENV_B64 }}
+          ENV_PRIVATE_B64: ${{ github.event.inputs.target == 'prod' && secrets.PROD_ENV_PRIVATE_B64 || secrets.STAGING_ENV_PRIVATE_B64 }}
         run: |
           set -euo pipefail
           TARGET='${{ steps.prep.outputs.target }}'
           DEPLOY_PATH='${{ steps.prep.outputs.deploy_path }}'
           cd "$DEPLOY_PATH"
           export GH_OWNER
+          # Write optional .env files if provided as base64 via environment secrets
+          if [ -n "${ENV_B64:-}" ]; then \
+            printf '%s' "$ENV_B64" | base64 -d > .env 2>/dev/null || \
+            printf '%s' "$ENV_B64" | base64 -D > .env 2>/dev/null || \
+            printf '%s' "$ENV_B64" | openssl base64 -d -A -out .env 2>/dev/null || true; \
+          fi
+          if [ -n "${ENV_PRIVATE_B64:-}" ]; then \
+            printf '%s' "$ENV_PRIVATE_B64" | base64 -d > .env.private 2>/dev/null || \
+            printf '%s' "$ENV_PRIVATE_B64" | base64 -D > .env.private 2>/dev/null || \
+            printf '%s' "$ENV_PRIVATE_B64" | openssl base64 -d -A -out .env.private 2>/dev/null || true; \
+          fi
+          # Detect host arch and set compose PLATFORM accordingly (matches multi-arch images)
+          ARCH=$(uname -m || echo unknown)
+          case "$ARCH" in
+            x86_64|amd64) export PLATFORM=linux/amd64 ;;
+            arm64|aarch64) export PLATFORM=linux/arm64/v8 ;;
+            *) export PLATFORM="" ;;
+          esac
+          echo "[runner] Host arch=$ARCH PLATFORM=${PLATFORM:-default}"
           if [ "$TARGET" = "prod" ]; then
             export COMPOSE_PROFILES=prod
             FILE=docker-compose.prod.yml
