--- a/.github/workflows/deploy-dev-runner.yml
+++ b/.github/workflows/deploy-dev-runner.yml
@@ -13,10 +13,10 @@ permissions:
 jobs:
   deploy:
     if: ${{ github.event_name == 'workflow_dispatch' || (github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'develop') }}
-    # IMPORTANT: Ensure your remote self-hosted runner has label: 'dev' (Windows runner recommended).
+    # Run on macOS/Linux self-hosted runner labeled 'pro11-deploy'
     runs-on:
       - self-hosted
-      - dev
+      - pro11-deploy
     concurrency:
       group: deploy-dev-runner
       cancel-in-progress: false
@@ -28,67 +28,67 @@ jobs:
       BACKEND_TAG: dev-${{ github.event.workflow_run.head_sha || github.sha }}
     defaults:
       run:
-        shell: cmd
+        shell: bash
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Diagnostics (env and Docker)
-        shell: cmd
+        shell: bash
         run: |
-          cd %GITHUB_WORKSPACE%
-          echo GITHUB_WORKSPACE=%GITHUB_WORKSPACE%
-          echo GH_OWNER=%GH_OWNER%
-          echo COMPOSE_PROJECT_NAME=%COMPOSE_PROJECT_NAME%
-          echo COMPOSE_FILE=%COMPOSE_FILE%
-          docker --version
-          docker info
-          echo Listing workspace files:
-          dir /b
+          cd "$GITHUB_WORKSPACE"
+          echo "GITHUB_WORKSPACE=$GITHUB_WORKSPACE"
+          echo "GH_OWNER=$GH_OWNER"
+          echo "COMPOSE_PROJECT_NAME=$COMPOSE_PROJECT_NAME"
+          echo "COMPOSE_FILE=$COMPOSE_FILE"
+          docker --version || true
+          docker info || true
+          echo "Listing workspace files:"
+          ls -la
 
-      - name: Deploy on Windows runner (cmd + certutil only)
-        shell: cmd
+      - name: Deploy on POSIX runner (bash)
+        shell: bash
         env:
           DEV_ENV_B64: ${{ secrets.DEV_ENV_B64 }}
           DEV_ENV_PRIVATE_B64: ${{ secrets.DEV_ENV_PRIVATE_B64 }}
           GHCR_USER: ${{ github.actor }}
           GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cd %GITHUB_WORKSPACE%
-          if not "%DEV_ENV_B64%"=="" (
-            > .env.b64 echo %DEV_ENV_B64%
-            certutil -f -decode .env.b64 .env >NUL 2>&1
-            del /f /q .env.b64
-          )
-          if not "%DEV_ENV_PRIVATE_B64%"=="" (
-            > .env.private.b64 echo %DEV_ENV_PRIVATE_B64%
-            certutil -f -decode .env.private.b64 .env.private >NUL 2>&1
-            del /f /q .env.private.b64
-          )
-          echo %GHCR_TOKEN% | docker login ghcr.io -u %GHCR_USER% --password-stdin
-          rem Always pull latest images for moving tags
-          docker compose -f %COMPOSE_FILE% pull --ignore-pull-failures
-          rem Force recreate to avoid stale containers using cached layers
-          docker compose -f %COMPOSE_FILE% up -d --force-recreate
-            rem Diagnostics: show resolved tags and image digests
-            echo FRONTEND_TAG=%FRONTEND_TAG%
-            echo BACKEND_TAG=%BACKEND_TAG%
-            docker compose -f %COMPOSE_FILE% images
-            docker inspect -f "{{.Config.Image}} | {{.Image}}" pro11-frontend-dev || echo inspect frontend failed
-            docker inspect -f "{{.Config.Image}} | {{.Image}}" pro11-app-dev || echo inspect app failed
-          rem Wait briefly for DB to be healthy (up to ~60s)
-          for /l %%i in (1,1,60) do (
-            docker compose -f %COMPOSE_FILE% ps | findstr /i "db" | findstr /i "healthy" && goto :db_ok
-            ping -n 2 127.0.0.1 >NUL
-          )
-          :db_ok
-          rem Run DB migrations inside the app container (best-effort)
-          docker compose -f %COMPOSE_FILE% exec -T app poetry run alembic -c alembic.ini upgrade head || echo Migration step skipped/failed
-          rem Show service status and basic frontend files to help debug 404s
-          docker compose -f %COMPOSE_FILE% ps
-          docker compose -f %COMPOSE_FILE% exec -T frontend sh -lc "ls -la /usr/share/nginx/html || true"
-            docker compose -f %COMPOSE_FILE% exec -T frontend sh -lc "grep -n 'build-meta.js' /usr/share/nginx/html/index.html || true"
-            docker compose -f %COMPOSE_FILE% exec -T frontend sh -lc "[ -f /usr/share/nginx/html/build-meta.js ] && head -n 1 /usr/share/nginx/html/build-meta.js || echo no-build-meta"
-          docker compose -f %COMPOSE_FILE% logs --no-color --tail=200 frontend || true
-          docker system prune -f
+          set -euo pipefail
+          cd "$GITHUB_WORKSPACE"
+          # Optional: write .env files from base64 secrets
+          if [ -n "${DEV_ENV_B64:-}" ]; then \
+            printf '%s' "$DEV_ENV_B64" | base64 -d > .env 2>/dev/null || \
+            printf '%s' "$DEV_ENV_B64" | base64 -D > .env 2>/dev/null || \
+            printf '%s' "$DEV_ENV_B64" | openssl base64 -d -A -out .env 2>/dev/null || true; \
+          fi
+          if [ -n "${DEV_ENV_PRIVATE_B64:-}" ]; then \
+            printf '%s' "$DEV_ENV_PRIVATE_B64" | base64 -d > .env.private 2>/dev/null || \
+            printf '%s' "$DEV_ENV_PRIVATE_B64" | base64 -D > .env.private 2>/dev/null || \
+            printf '%s' "$DEV_ENV_PRIVATE_B64" | openssl base64 -d -A -out .env.private 2>/dev/null || true; \
+          fi
+          echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USER" --password-stdin
+          # Always pull latest moving tags, then force recreate
+          docker compose -f "$COMPOSE_FILE" pull --ignore-pull-failures || true
+          docker compose -f "$COMPOSE_FILE" up -d --force-recreate
+          # Diagnostics
+          echo "FRONTEND_TAG=$FRONTEND_TAG"
+          echo "BACKEND_TAG=$BACKEND_TAG"
+          docker compose -f "$COMPOSE_FILE" images || true
+          docker inspect -f '{{.Config.Image}} | {{.Image}}' pro11-frontend-dev || echo 'inspect frontend failed'
+          docker inspect -f '{{.Config.Image}} | {{.Image}}' pro11-app-dev || echo 'inspect app failed'
+          # Wait up to ~60s for DB to be healthy
+          for i in $(seq 1 60); do
+            if docker compose -f "$COMPOSE_FILE" ps | grep -i 'db' | grep -qi 'healthy'; then break; fi
+            sleep 1
+          done
+          # Run DB migrations inside the app container (best-effort)
+          docker compose -f "$COMPOSE_FILE" exec -T app poetry run alembic -c alembic.ini upgrade head || echo 'Migration step skipped/failed'
+          # Show service status and basic frontend files
+          docker compose -f "$COMPOSE_FILE" ps || true
+          docker compose -f "$COMPOSE_FILE" exec -T frontend sh -lc "ls -la /usr/share/nginx/html || true"
+          docker compose -f "$COMPOSE_FILE" exec -T frontend sh -lc "grep -n 'build-meta.js' /usr/share/nginx/html/index.html || true"
+          docker compose -f "$COMPOSE_FILE" exec -T frontend sh -lc "[ -f /usr/share/nginx/html/build-meta.js ] && head -n 1 /usr/share/nginx/html/build-meta.js || echo no-build-meta"
+          docker compose -f "$COMPOSE_FILE" logs --no-color --tail=200 frontend || true
+          docker system prune -f || true
