--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,6 +8,22 @@ services:
     environment:
       APP_ENV: prod
       LOG_LEVEL: INFO
+      # Align behavioral flags with local/dev
+      FAST_STARTUP: "false"
+      FAST_STARTUP_AUTO_UPGRADE: "true"
+      SIGNAL_SOURCE: ml
+      ML_AUTO_LOOP_ENABLED: "true"
+      ML_AUTO_EXECUTE_ENABLED: "true"
+      ML_AUTO_EXECUTE_PAPER: "true"
+      LOW_BUY_EXIT_LOOP_ENABLED: "true"
+      AUTO_BOOTSTRAP_LOCAL: "1"
+      BOOTSTRAP_BACKFILL_BARS: "50000"
+      PROMOTION_MIN_ABS_AUC_DELTA: "0.0005"
+      PROMOTION_MAX_ECE_DEGRADATION: "0.02"
+      PROMOTION_MAX_BRIER_DEGRADATION: "0.02"
+      PROMOTION_MIN_VAL_SAMPLES: "400"
+      BOTTOM_MIN_LABELS: "20"
+      BOTTOM_OHLCV_FETCH_CAP: "80000"
     ports:
       - "8000:8000"
     restart: unless-stopped
