--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,22 @@ services:
       #  - 호스트/외부 RDS 로 붙으려면 .env 에 host.docker.internal 또는 실제 호스트/IP 지정
       APP_ENV: ${APP_ENV:-docker}
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
+      # Align with local/dev behavior
+      FAST_STARTUP: ${FAST_STARTUP:-false}
+      FAST_STARTUP_AUTO_UPGRADE: ${FAST_STARTUP_AUTO_UPGRADE:-true}
+      SIGNAL_SOURCE: ${SIGNAL_SOURCE:-ml}
+      ML_AUTO_LOOP_ENABLED: ${ML_AUTO_LOOP_ENABLED:-true}
+      ML_AUTO_EXECUTE_ENABLED: ${ML_AUTO_EXECUTE_ENABLED:-true}
+      ML_AUTO_EXECUTE_PAPER: ${ML_AUTO_EXECUTE_PAPER:-true}
+      LOW_BUY_EXIT_LOOP_ENABLED: ${LOW_BUY_EXIT_LOOP_ENABLED:-true}
+      AUTO_BOOTSTRAP_LOCAL: ${AUTO_BOOTSTRAP_LOCAL:-1}
+      BOOTSTRAP_BACKFILL_BARS: ${BOOTSTRAP_BACKFILL_BARS:-50000}
+      PROMOTION_MIN_ABS_AUC_DELTA: ${PROMOTION_MIN_ABS_AUC_DELTA:-0.0005}
+      PROMOTION_MAX_ECE_DEGRADATION: ${PROMOTION_MAX_ECE_DEGRADATION:-0.02}
+      PROMOTION_MAX_BRIER_DEGRADATION: ${PROMOTION_MAX_BRIER_DEGRADATION:-0.02}
+      PROMOTION_MIN_VAL_SAMPLES: ${PROMOTION_MIN_VAL_SAMPLES:-400}
+      BOTTOM_MIN_LABELS: ${BOTTOM_MIN_LABELS:-20}
+      BOTTOM_OHLCV_FETCH_CAP: ${BOTTOM_OHLCV_FETCH_CAP:-80000}
       AUTO_RETRAIN_ENABLED: ${AUTO_RETRAIN_ENABLED:-false}
       AUTO_PROMOTE_ENABLED: ${AUTO_PROMOTE_ENABLED:-false}
       CALIBRATION_MONITOR_ENABLED: ${CALIBRATION_MONITOR_ENABLED:-false}
